--- a/business-application-kjar/.settings/.gitignore
+++ b/business-application-kjar/.settings/.gitignore
@@ -1,3 +1,5 @@
 /org.eclipse.core.resources.prefs
 /org.eclipse.jdt.core.prefs
 /org.eclipse.m2e.core.prefs
+/org.eclipse.bpmn2.modeler.core.prefs
+/.gitignore
