--- a/business-application-kjar/pom.xml
+++ b/business-application-kjar/pom.xml
@@ -180,7 +180,7 @@
   </repositories>
   <dependencies>
   	<dependency>
-  		<groupId>com.javierito.booking</groupId>
+  		<groupId>example.booking</groupId>
   		<artifactId>business-application-model</artifactId>
   		<version>1.0-SNAPSHOT</version>
   	</dependency>
