--- a/business-application-service/pom.xml
+++ b/business-application-service/pom.xml
@@ -67,7 +67,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>com.javierito.booking</groupId>
+    	<groupId>example.booking</groupId>
     	<artifactId>business-application-model</artifactId>
     	<version>1.0-SNAPSHOT</version>
     </dependency>
